# filefetcher

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: example_fetch_file_extensions_zenodo.py  example_fetch_file_extentions.py  example_fetch_file_name_and_type.py  example_fetch_file_records.py  example_fetch_file_records_with_validation.py  example_fetch_raw_file_info.py
src/filefetcher/: __init__.py  api.py  core.py  file_record.schema.json
src/filefetcher/adaptors/: datahugger.py  onedata_hugger.py
tests/: test_basic.py
